# gs-docs

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: configuration.py  github.py  utils.py
tests/: test_configuration.py  test_github.py  test_utils.py
